--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
-      href="assets/img/favicon.png"
+      href="assets/img/Profilepic.jpg"
       type="image/x-icon"
     />
 
@@ -21,7 +21,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Responsive portfolio website Rian - Bedimcode</title>
+    <title>Hanzla Nouman Portfolio</title>
   </head>
   <body>
     <!--==================== HEADER ====================-->
@@ -88,82 +88,160 @@
               />
               <div class="geometric-box"></div>
               <div class="home__social">
-               <a href="" target="_blank" class="home__social-link"> <i class="ri-instagram-line"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link"> <i class="ri-linkedin-box-line"></i>
-               </a>
-               <a href="" target="_blank" class="home__social-link"> <i class="ri-github-line"></i>
-               </a>
-               </div>
+                <a href="" target="_blank" class="home__social-link">
+                  <i class="ri-instagram-line"></i>
+                </a>
+                <a href="" target="_blank" class="home__social-link">
+                  <i class="ri-linkedin-box-line"></i>
+                </a>
+                <a href="" target="_blank" class="home__social-link">
+                  <i class="ri-github-line"></i>
+                </a>
+              </div>
             </div>
           </div>
           <div class="home__info">
             <p class="home__description">
-            <b>Frontend Developer</b>, with knowledge in web development and design, I offer the best projects resulting in quality work.
+              <b>Frontend Developer</b>, with knowledge in web development and
+              design, I offer the best projects resulting in quality work.
             </p>
             <a href="#about" class="home__scroll">
-            <div class="home__scroll-box">
-            <i class="ri-arrow-down-s-line"></i>
-            </div>
-            <span class="home__scroll-text"></span>
+              <div class="home__scroll-box">
+                <i class="ri-arrow-down-s-line"></i>
+              </div>
+              <span class="home__scroll-text"></span>
             </a>
-            </div>
+          </div>
+        </div>
       </section>
 
       <!--==================== ABOUT ====================-->
       <section class="about section" id="about">
-         <div class="about__container container grid">
-            <h2 class="section__title-1">
-            About Me.
-            </h2>
-            <div class="about__perfil">
+        <div class="about__container container grid">
+          <h2 class="section__title-1">About Me.</h2>
+          <div class="about__perfil">
             <div class="about__image">
-            <img src="assets/img/Profilepic1.jpg" alt="image" class="about__img">
-            <div class="about__shadow"></div>
-            <div class="geometric-box"></div>
-            <img src="assets/img/random-lines.svg" alt="" class="about__line">
-            <div class="about__box"></div>
+              <img
+                src="assets/img/Profilepic1.jpg"
+                alt="image"
+                class="about__img"
+              />
+              <div class="about__shadow"></div>
+              <div class="geometric-box"></div>
+              <img
+                src="assets/img/random-lines.svg"
+                alt=""
+                class="about__line"
+              />
+              <div class="about__box"></div>
             </div>
-            </div>
-            <div class="about__info">
-               <p class="about__description">
-               Passionate about creating <b>Web Pages</b> with <b>UI/UX User Interface</b>, I have years of experience and many clients are happy with the projects carried out.
-               </p>
-               <ul class="about__list">
-               <li class="about_item">
-               
-               <b>My Skills Are:</b> HTML, CSS, JavaScript, React, Git & GitHub, Bootstrap, Flutter & Figma.
-               </li>
-               </ul>
-               </div>
-               <div class="about__buttons">
-                  <a href="#contact" class="button"> <i class="ri-send-plane-line"></i> Contact Me
-                  </a>
-                  <a href="https://www.linkedin.com/" target="_blank" class="button__ghost"> <i class="ri-linkedin-box-line"></i>
-                  </a>
-                  </div>
-            </div>
+          </div>
+          <div class="about__info">
+            <p class="about__description">
+              Passionate about creating <b>Web Pages</b> with
+              <b>UI/UX User Interface</b>, I have years of experience and many
+              clients are happy with the projects carried out.
+            </p>
+            <ul class="about__list">
+              <li class="about__item">
+                <b>My Skills Are:</b> HTML, CSS, JavaScript, React, Git &
+                GitHub, Bootstrap, Flutter & Figma.
+              </li>
+            </ul>
+          </div>
+          <div class="about__buttons">
+            <a href="#contact" class="button">
+              <i class="ri-send-plane-line"></i> Contact Me
+            </a>
+            <a
+              href="https://www.linkedin.com/"
+              target="_blank"
+              class="button__ghost"
+            >
+              <i class="ri-linkedin-box-line"></i>
+            </a>
+          </div>
+        </div>
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section"></section>
+      <section class="services section">
+        <h2 class="section__title-2"><span>Services.</span></h2>
+        <div class="services__container container grid">
+          <article class="services__card">
+            <div class="services__border"></div>
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-paint-brush-line"></i>
+              </div>
+              <h2 class="services__title">Wordpress Development</h2>
+              <p class="services__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod
+                quo harum libero culpa doloribus! Quisquam adipisci velit veniam
+                tempore architecto illum eum vitae magni nisi!
+              </p>
+            </div>
+          </article>
+          <article class="services__card">
+            <div class="services__border"></div>
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-code-box-line"></i>
+              </div>
+              <h2 class="services__title">Web Development</h2>
+              <p class="services__description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+                aut totam dolores laudantium officia repudiandae hic nihil
+                voluptatem? Perferendis minus repellendus laudantium fuga
+                laborum consequatur sapiente dolor quisquam maxime inventore!
+              </p>
+            </div>
+          </article>
+          <article class="services__card">
+            <div class="services__border"></div>
+            <div class="services__content">
+              <div class="services__icon">
+                <div class="services__box"></div>
+                <i class="ri-smartphone-line"></i>
+              </div>
+              <h2 class="services__title">Mobile Development</h2>
+              <p class="services__description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptates eos ab voluptas corrupti voluptatibus sequi in
+                adipisci consectetur hic deleniti inventore eveniet assumenda,
+                repellendus delectus laboriosam iure nostrum dignissimos rem.
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
 
       <!--==================== PROJECTS ====================-->
-      <section class="projects section" id="projects"></section>
+      <section class="projects section" id="projects">
+        <!-- Add projects content here -->
+      </section>
 
       <!--==================== CONTACT ====================-->
-      <section class="contact section" id="contact"></section>
+      <section class="contact section" id="contact">
+        <!-- Add contact content here -->
+      </section>
     </main>
 
     <!--==================== FOOTER ====================-->
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <!-- Add footer content here -->
+    </footer>
 
     <!--========== SCROLL UP ==========-->
+    <!-- Add scroll up content if needed -->
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src=""></script>
 
     <!--=============== EMAIL JS ===============-->
+    <!-- Add Email JS if needed -->
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
