--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--=============== FAVICON ===============-->
     <link
       rel="shortcut icon"
-      href="assets/img/Profilepic.jpg"
+      href="assets/img/favicon.png"
       type="image/x-icon"
     />
 
@@ -42,10 +42,13 @@
               <a href="#about" class="nav__link">About Me</a>
             </li>
             <li class="nav__item">
+              <a href="#services" class="nav__link">Services</a>
+            </li>
+            <li class="nav__item">
               <a href="#projects" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#contact" class="nav__link">Contact Me</a>
+              <a href="#contact" class="nav__link nav__link-button">Contact Me</a>
             </li>
           </ul>
 
@@ -55,6 +58,7 @@
         </div>
         <div class="nav__buttons">
           <!-- Toggle button -->
+          <i class="ri-moon-line change-theme" id="theme-button"></i>  
           <div class="nav__toggle" id="nav-toggle">
             <i class="ri-menu-4-line"></i>
           </div>
@@ -67,7 +71,7 @@
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
         <div class="home__container container grid">
-          <h1 class="home__name">Hanzla Nouman</h1>
+          <h1 class="home__name">Hanzla Nn.</h1>
           <div class="home__perfil">
             <div class="home__image">
               <img
@@ -102,21 +106,22 @@
           </div>
           <div class="home__info">
             <p class="home__description">
-              <b>Frontend Developer</b>, with knowledge in web development and
-              design, I offer the best projects resulting in quality work.
+              <b>Full Stack Web And Mobile Developer</b>, with knowledge in web development and
+              moibile development, I offer the best projects resulting in quality work.
             </p>
             <a href="#about" class="home__scroll">
               <div class="home__scroll-box">
                 <i class="ri-arrow-down-s-line"></i>
               </div>
-              <span class="home__scroll-text"></span>
+              
+              <span class="home__scroll-text">Scroll Down</span>
             </a>
           </div>
         </div>
       </section>
 
       <!--==================== ABOUT ====================-->
-      <section class="about section" id="about">
+      <section class="about section active-link" id="about">
         <div class="about__container container grid">
           <h2 class="section__title-1">About Me.</h2>
           <div class="about__perfil">
@@ -148,24 +153,24 @@
                 GitHub, Bootstrap, Flutter & Figma.
               </li>
             </ul>
-          </div>
-          <div class="about__buttons">
-            <a href="#contact" class="button">
-              <i class="ri-send-plane-line"></i> Contact Me
-            </a>
-            <a
-              href="https://www.linkedin.com/"
-              target="_blank"
-              class="button__ghost"
-            >
-              <i class="ri-linkedin-box-line"></i>
-            </a>
+            <div class="about__buttons">
+              <a href="#contact" class="button">
+                <i class="ri-send-plane-line"></i> Contact Me
+              </a>
+              <a
+                href="https://www.linkedin.com/"
+                target="_blank"
+                class="button__ghost"
+              >
+                <i class="ri-linkedin-box-line"></i>
+              </a>
+            </div>
           </div>
         </div>
       </section>
 
       <!--==================== SERVICES ====================-->
-      <section class="services section">
+      <section class="services section" id="services">
         <h2 class="section__title-2"><span>Services.</span></h2>
         <div class="services__container container grid">
           <article class="services__card">
@@ -220,28 +225,235 @@
 
       <!--==================== PROJECTS ====================-->
       <section class="projects section" id="projects">
-        <!-- Add projects content here -->
+        <h2 class="section__title-2"><span>Projects.</span></h2>
+        <div class="projects__container container grid">
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/project-1.jpg"
+                alt="image"
+                class="projects__img"
+              />
+              <a href="#" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+            <div class="projects__content">
+              <h3 class="projects__subtitle">App</h3>
+              <h2 class="projects__title">Yoga App</h2>
+
+              <p class="projects__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+                doloribus iure natus fuga voluptatem nulla distinctio, cum
+                magnam, quidem repellat.
+              </p>
+            </div>
+            <div class="projects__buttons">
+              <a href="" target="_blank" class="projects__link">
+                <i class="ri-github-line"></i>View
+              </a>
+            </div>
+          </article>
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/project-2.jpg"
+                alt="image"
+                class="projects__img"
+              />
+              <a href="#" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Mobile App</h3>
+              <h2 class="projects__title">Banking App</h2>
+
+              <p class="projects__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+                doloribus iure natus fuga voluptatem nulla distinctio, cum
+                magnam, quidem repellat.
+              </p>
+            </div>
+            <div class="projects__buttons">
+              <a href="" target="_blank" class="projects__link">
+                <i class="ri-github-line"></i>View
+              </a>
+            </div>
+          </article>
+          <article class="projects__card">
+            <div class="projects__image">
+              <img
+                src="assets/img/project-3.jpg"
+                alt="image"
+                class="projects__img"
+              />
+              <a href="#" class="projects__button button">
+                <i class="ri-arrow-right-up-line"></i>
+              </a>
+            </div>
+            <div class="projects__content">
+              <h3 class="projects__subtitle">Website</h3>
+              <h2 class="projects__title">Ecommerce Website</h2>
+
+              <p class="projects__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque
+                doloribus iure natus fuga voluptatem nulla distinctio, cum
+                magnam, quidem repellat.
+              </p>
+            </div>
+            <div class="projects__buttons">
+              <a href="" target="_blank" class="projects__link">
+                <i class="ri-github-line"></i>View
+              </a>
+            </div>
+          </article>
+        </div>
       </section>
 
       <!--==================== CONTACT ====================-->
       <section class="contact section" id="contact">
-        <!-- Add contact content here -->
+        <div class="contact__container grid">
+          <div class="contact__data">
+            <h2 class="section__title-2">
+              <span>Contact Me.</span>
+            </h2>
+            <p class="contact__description-1">
+              I will read att emails. Send me any message you want and I'll get
+              back to you.
+            </p>
+            <p class="contact__description-2">
+              I need your <b>Name</b> and <b>Emait Address</b>, but you won't
+              receive anything other than your reply .
+            </p>
+            <div class="geometric-box"></div>
+          </div>
+            <div class="contact__mail">
+              <h2 class="contact__title">Send Me A Message</h2>
+              <form action="" class="contact__form" id="contact-form">
+                <div class="contact__group">
+                  <div class="contact__box">
+                    <input
+                      type="text"
+                      name="user_name"
+                      class="contact__input"
+                      required
+                      id="name"
+                      placeholder="First Name"
+                    />
+                    <label for="name" class="contact__label">First Name</label>
+                  </div>
+                  <div class="contact__box">
+                    <input
+                      type="email"
+                      name="user_email"
+                      class="contact__input"
+                      required
+                      id="name"
+                      placeholder="Email"
+                    />
+                    <label for="user_email" class="contact__label"
+                      >Email Address</label
+                    >
+                  </div>
+                </div>
+                <div class="contact__box">
+                  <input
+                    type="text"
+                    name="user_subject"
+                    class="contact__input"
+                    required
+                    id="name"
+                    placeholder="Subject"
+                  />
+                  <label for="user_subject" class="contact__label"
+                    >Subject</label
+                  >
+                </div>
+                <div class="contact__box contact__area">
+                  <textarea
+                    name="user_message"
+                    id="message"
+                    class="contact__input"
+                    required
+                    placeholder="Message"
+                  ></textarea>
+                  <label for="user_message" class="contact__label"
+                    >Message</label
+                  >
+                </div>
+                <button type="submit" class="contact__button button">
+                  <i class="ri-send-plane-line"></i>Send Message
+                </button>
+                <p id="contact-message" class="contact__message"></p>
+              </form>
+            </div>
+          
+          <div class="contact__social">
+            <img
+              src="assets/img/curved-arrow.svg"
+              alt=""
+              class="contact__social-arrow"
+            />
+            <div class="contact__social-data">
+              <div>
+                <p class="contact__social-description-1">
+                  Does not send emails
+                </p>
+                <p class="contact__social-description-2">
+                  Write me on my social networks
+                </p>
+              </div>
+              <div class="contact__social-links">
+                <a href="" class="contact__social-link" target="_blank">
+                  <i class="ri-facebook-circle-line"></i>
+                </a>
+                <a href="" class="contact__social-link" target="_blank">
+                  <i class="ri-instagram-line"></i>
+                </a>
+                <a href="" class="contact__social-link" target="_blank">
+                  <i class="ri-linkedin-box-line"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
     <!--==================== FOOTER ====================-->
     <footer class="footer">
-      <!-- Add footer content here -->
+      <div class="footer__container container grid">
+        <ul class="footer__links">
+        <li>
+        <a href="#about" class="footer__link">About </a>
+        </li>
+        <li>
+        <a href="#services" class="footer__link">Services</a>
+        </li>
+        <li>
+         <a href="#projects" class="footer__link">Projects</a>
+        </li>
+        </ul>
+        <span class="footer__copy">
+        &#169; All Rights Reserved By <a href="">Hanzla Nouman.</a>
+        </span>
+        </div>
     </footer>
 
     <!--========== SCROLL UP ==========-->
-    <!-- Add scroll up content if needed -->
+    <a href="#" class="scroll-up" id="scroll-up">
+      <i class="ri-arrow-up-s-line"></i>
+    </a>
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="assets/js/scrollreveal.min.js"></script>
 
     <!--=============== EMAIL JS ===============-->
-    <!-- Add Email JS if needed -->
+    <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
